Register the KQL function in various places.